My First Assignment

--- a/style.css
+++ b/style.css
@@ -675,7 +675,7 @@ header{
     line-height: 24px;
     letter-spacing: 0.3px;
     color: #808080;
-    margin-top: 20px;
+    margin: 30px 0;
 }
 .fitness .container .get-start h3{
     font-size: 2rem;
