--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ header{
     margin: auto;
     color: #ffffff;
     margin-top: 24px;
+    position: relative;
 }
 .banner .text-area h1{
     font-size: 4.875rem;
@@ -99,7 +100,7 @@ header{
     text-align: left;
     color: #808080;
     font-size: 1rem;
-    margin: 28px 0;
+    margin: 32px 0;
 }
 .banner .text-area .button{
     display: flex;
@@ -125,7 +126,6 @@ header{
     outline: none;
 }
 .banner .image div{
-    position: relative;
     position: absolute;
     border-radius: 12px;
     border: 1px solid #1a1a1a;
@@ -160,6 +160,33 @@ header{
 .banner .image .div2 h1{
     margin: 0 0 5px 0;
 }
+.banner .video-1 h2{
+    font-size: 2.5rem;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.banner .video .video-2 h3{
+    font-size: 1.5rem;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.banner .video div span{
+    font-size: 1rem;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #a6a6a6;
+    display: block;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+.banner .video .video-2 span{
+    margin-top: 5px;
+}
+.banner .video .video-1
 /* Banner Style End */
 
 /* Habits Style Start */
@@ -188,6 +215,8 @@ header{
     line-height: 24px;
     letter-spacing: 0.3px;
     color: #808080;
+    margin: auto;
+    margin-top: 20px;
 }
 .your-habit .grid-container{
     width: 100%;
@@ -253,7 +282,8 @@ header{
     font-size: 14px;
     letter-spacing: 0.3px;
     color: #808080;
-    margin-bottom: 20px;
+    margin-bottom: 34px;
+    margin-top: 14px;
 }
 .extra-run .text-content button{
     display: inline-block;
@@ -276,7 +306,6 @@ header{
 .extra-run .image{
     height: 312px;
     margin: 25px 5px;
-    object-fit: contain;
 }
 .extra-run .image img{
     width: 100%;
@@ -306,7 +335,7 @@ header{
     font-size: 14px;
     color: #808080;
     letter-spacing: 0.3px;
-    margin: 10px 0;
+    margin: 16px 0;
 }
 .training .container{
     width: 100%;
@@ -593,6 +622,7 @@ header{
     letter-spacing: 0.3px;
     color: #808080;
     font-size: 14px;
+    margin-top: 14px;
 }
 .our-team .container{
     width: 100%;
