--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header{
     box-shadow: 0 4px 4px 0 #000000 25%;
     font-family: "Inter", serif;
     padding: 0 20px;
+    position: relative;
 }
 .head{
     max-width: 1440px;
@@ -83,7 +84,6 @@ header{
     margin: auto;
     color: #ffffff;
     margin-top: 24px;
-    position: relative;
 }
 .banner .text-area h1{
     font-size: 4.875rem;
@@ -125,7 +125,7 @@ header{
     background-color: #E6533C;
     outline: none;
 }
-.banner .image div{
+/* .banner .image div{
     position: absolute;
     border-radius: 12px;
     border: 1px solid #1a1a1a;
@@ -159,22 +159,65 @@ header{
 }
 .banner .image .div2 h1{
     margin: 0 0 5px 0;
+} */
+ .banner .image{
+    position: relative;
+ }
+.banner .video{
+    position: absolute;
+    width: 140px;
+    height: 70px;
+    border-radius: 12px;
+    background-color: #1a1a1a;
+    border: 1px solid #262626;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
-.banner .video-1 h2{
+.banner .video h4{
+    color: #ffffff;
+    font-size: 1.5rem;
+    line-height: 24px;
+    letter-spacing: 1px;
+}
+.banner .video span{
+    font-size: 10px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    color: #a6a6a6;
+}
+.banner .video-2 h4{
+    padding: 0;
+    font-size: 1rem;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+}
+.banner .video div{
+    margin: 10px 0 10px 10px;
+}
+.banner .video-1{
+    left: 85%;
+    top: 31%;
+}
+.banner .video-2{
+    left: 10%;
+    top: 82%;
+}
+/* .banner .video-1 h2{
     font-size: 2.5rem;
     line-height: 24px;
     letter-spacing: 0.3px;
     margin-top: 20px;
     margin-left: 20px;
 }
-.banner .video .video-2 h3{
+.banner .video-2 h3{
     font-size: 1.5rem;
     line-height: 24px;
     letter-spacing: 0.3px;
     margin-top: 20px;
     margin-left: 20px;
 }
-.banner .video div span{
+.banner  .video-1 span{
     font-size: 1rem;
     line-height: 24px;
     letter-spacing: 0.5px;
@@ -183,16 +226,20 @@ header{
     margin-top: 10px;
     margin-left: 20px;
 }
-.banner .video .video-2 span{
+.banner .video-2 span{
     margin-top: 5px;
 }
-.banner .video .video-1
+.banner .video-1{
+    position: absolute;
+}
+.banner .video-2{
+    position: absolute;
+} */
 /* Banner Style End */
 
 /* Habits Style Start */
 .your-habit{
     max-width: 1440px;
-    font-family: "Inter", serif;
     color: #ffffff;
     margin: auto;
     display: grid;
@@ -203,12 +250,15 @@ header{
 .your-habit .content{
     width: 100%;
     text-align: center;
+    font-family: "Inter", serif;
+    margin-top: 80px;
 }
 .your-habit .content h2{
     font-size: 3rem;
     line-height: 120%;
     margin: 0;
     margin-bottom: 14px;
+    color: #ffffff;
 }
 .your-habit .content p{
     font-size: 14px;
@@ -227,6 +277,7 @@ header{
     margin: auto;
     gap: 20px;
     margin-top: 58px;
+    font-family: "Inter", serif;
 }
 .your-habit .grid-container .grid-card{
     margin: auto;
@@ -494,6 +545,7 @@ header{
     color: #808080;
     letter-spacing: 0.3px;
     font-size: 14px;
+    margin-top: 14px;
 }
 /* Calculator Style Start */
 
@@ -805,6 +857,14 @@ header{
         margin-top: 115px;
         position: relative;
     }
+    .banner .video-1{
+        left: 75%;
+        top: 20%;
+    }
+    .banner .video-2{
+        left: 10%;
+        top: 67%;
+    }
     .your-habit .grid-container{
         display: grid;
         grid-template-columns: 50% 50%;
@@ -883,6 +943,10 @@ header{
     .banner .text-area p{
         width: 80%;
         margin: 20px 0;
+    }
+    .banner .video-2{
+        left: 20%;
+        top: 55%;
     }
     .your-habit .content h2{
         font-size: 2rem;
