--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ header{
 }
 .your-habit .grid-container .grid-card .title{
     padding: 0 10px;
+    margin-top: 30px;
 }
 .your-habit .grid-container .grid-card h4{
     font-size: 1.125rem;
